- Exclusively handle templates on Committee and not on CommitteeContainer anymore. [njohner]
- Extend @listing endpoint with `tasks`-listing. [elioschmutz]
- Add option not to revoke permissions associated with a task when closing it. [njohner]
- Respect the local roles and the inheritance thereof of dossier templates. [Rotonen]
- Do not list auto-generated documents as recently touched. [njohner]
- Standardize french and german translation of "attachments" in meetings. [njohner]
- Do not list resolved tasks as pending in the 'My Tasks' tab. [Rotonen]
- Make attachments for `direct-execution` tasks editable by the responsible. [phgross]
- Make reject to skip transition only available for tasks part of a sequence. [phgross]
- Allow reassigning tasks to other org- and adminunits. [phgross]
- Update SaaS deployments documentation. [njohner]
- Adapt footer to new 4teamwork website. [njohner]
- Extend @listing endpoint with `workspaces`-listing. [elioschmutz]
- Add sharing white and black list prefix to config endpoint/view. [njohner]
- Move personal bar customization into opengever.base. [njohner]
- Unify Bumblebee URLs on REST API for document vs. document on a listing. [Rotonen]
- Make sure all workflow IDs are unique. [njohner]
- Add button to create protocol approval proposal from meeting. [njohner]
- Add support for filters in listing endpoint. [buchi]


2019.1.4 (2019-04-11)
---------------------

- Fix performance issue with search root exclusion in tabbed view listings. [lgraf, buchi]
- Fix creation of scaneingang dossier in the scan-in endpoint. [phgross]


2019.1.3 (2019-03-25)
---------------------

- Fix performance issue with search root exclusion in tabbed view listings. [lgraf]
- Fix upgrade step that reindexes object_provides for PDFs so it performs better. [lgraf]


2019.1.2 (2019-03-07)
---------------------

- Add a file extension column to document listings. [Rotonen]